# react-native-nitro-tor

./: .gitignore  CONTRIBUTING.md  NitroTor.podspec  README.md  flake.nix  nitro.json  package.json  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 34fhylm47py7vxr3b7crcvmihvcjnp6l-source  92ddwgpw60d4bc1cr4x61y6sf942ans8-source  wckpfrkzkhbbgzkdg0bnpiznz448nfv1-source
.github/ISSUE_TEMPLATE/: config.yml
Tor.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitrotor/: NitroTor.kt
android/src/main/java/com/nitrotor/: NitroTorPackage.kt
cpp/: HybridMath.cpp  HybridMath.hpp  HybridTor.cpp  HybridTor.hpp  NitroTor.cpp  NitroTor.hpp  cxx.h  ffi.rs.cc  glob_impl.cpp  lib.rs.cc  lib.rs.h  log.h  sifir_tor.h  tor_ffi.h
cpp_bak/: HybridTor.cpp  HybridTor.hpp
example/: app.json  metro.config.js  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/nitrotor/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jniLibs/armeabi-v7a/: liblnd.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroTorExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroTorExample.xcodeproj/: project.pbxproj
example/ios/NitroTorExample.xcodeproj/xcshareddata/xcschemes/: NitroTorExample.xcscheme
example/ios/NitroTorExample.xcworkspace/: contents.xcworkspacedata
example/ios/Tor.xcframework/: Info.plist
example/ios/TorCxxBridge.xcframework/: Info.plist
example/src/: App.tsx  _App.bak
ios/: NitroTor.swift
src/: NitroTor.nitro.ts  Tor.nitro.ts  Tor.nitro.ts.bak  index.tsx
